--- a/microkernel/Cargo.toml
+++ b/microkernel/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 allocator = { git = "https://github.com/Byte-OS/allocator.git", rev = "c6ce94"}
 buddy_system_allocator = "0.9.1"
 executor = { git = "https://github.com/Byte-OS/executor.git" }
-polyhal = { git = "https://github.com/Byte-OS/polyhal.git", features = ["kcontext"]}
+polyhal = { git = "https://github.com/Byte-OS/polyhal.git", features = ["kcontext", "multicore"]}
 log = "0.4"
 spin = { version = "0.9.8", features = ["mutex"] }
