--- a/users/Cargo.toml
+++ b/users/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+buddy_system_allocator = "0.9.1"
 syscall_consts = { path = "../crates/syscall_consts" }
