--- a/users/Cargo.toml
+++ b/users/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 buddy_system_allocator = "0.9.1"
+spin = { version = "0.9.8", features = ["mutex"] }
 syscall_consts = { path = "../crates/syscall_consts" }
