feat: add mutli user app model

--- a/users/Makefile
+++ b/users/Makefile
@@ -2,5 +2,5 @@ TARGET := riscv64gc-unknown-none-elf
 TARGET_ELF_DIR = target/$(TARGET)/release/
 
 all:
-	cargo build --release --target $(TARGET)
-	ls $(TARGET_ELF_DIR)
+	cargo build --release --target $(TARGET) --bin shell
+	cargo build --release --target $(TARGET) --bin vm
