--- a/users/Cargo.toml
+++ b/users/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 buddy_system_allocator = "0.9.1"
 spin = { version = "0.9.8", features = ["mutex"] }
 syscall_consts = { path = "../crates/syscall_consts" }
+xmas-elf = "0.9.0"
