--- a/users/Makefile
+++ b/users/Makefile
@@ -1,6 +1,13 @@
 TARGET := riscv64gc-unknown-none-elf
 TARGET_ELF_DIR = target/$(TARGET)/release/
 
-all:
+all: vm
+
+apps: 
 	cargo build --release --target $(TARGET) --bin shell
-	cargo build --release --target $(TARGET) --bin vm
+
+vm: apps
+	cd apps/vm && cargo build --release --target $(TARGET)
+
+.PHONY: all vm apps
+
