feat: add basic service model and a pong service

--- a/users/Makefile
+++ b/users/Makefile
@@ -4,7 +4,7 @@ TARGET_ELF_DIR = target/$(TARGET)/release/
 all: vm
 
 apps: 
-	cargo build --release --target $(TARGET) --bin shell
+	cargo build --release --target $(TARGET)
 
 vm: apps
 	cd apps/vm && cargo build --release --target $(TARGET)
