--- a/users/Makefile
+++ b/users/Makefile
@@ -1,13 +1,18 @@
 TARGET := riscv64gc-unknown-none-elf
 TARGET_ELF_DIR = target/$(TARGET)/release/
+BUILD_ARGS :=
+
+ifeq ($(TARGET), loongarch64-unknown-none)
+	BUILD_ARGS += -Z build-std=core,alloc
+endif
 
 all: vm
 
 apps: 
-	cargo build --release --target $(TARGET)
+	cargo build --release $(BUILD_ARGS) --target $(TARGET)
 
 vm: apps
-	cd apps/vm && cargo build --release --target $(TARGET)
+	cd apps/vm && cargo build --release $(BUILD_ARGS) --target $(TARGET)
 
 .PHONY: all vm apps
 
